# shalom

./: .gitattributes  .gitmodules  Cargo.toml  README.md  config-example.toml  rustfmt.toml
assets/icons/: README.md
shalom/: Cargo.toml
shalom/src/: config.rs  hass_client.rs  main.rs  oracle.rs  subscriptions.rs  theme.rs
shalom/src/context_menus/: light_control.rs  mod.rs
shalom/src/magic/: header_search.rs  mod.rs
shalom/src/pages/: mod.rs  omni.rs  room.rs
shalom/src/pages/room/: lights.rs  listen.rs
shalom/src/pages/room/listen/: search.rs
shalom/src/widgets/: blackhole_event.rs  colour_picker.rs  context_menu.rs  floating_element.rs  forced_rounded.rs  image_background.rs  image_card.rs  media_player.rs  mod.rs  mouse_area.rs  room_navigation.rs  spinner.rs  toast.rs  toggle_card.rs  track_card.rs
shalom/src/widgets/cards/: weather.rs
